--- a/使い方ガイド.md
+++ b/使い方ガイド.md
@@ -66,7 +66,7 @@
     -   黒い画面（コマンドプロンプト）が表示されます。
 
 2.  **対話形式で設定**:
-    -   画面に「Quality (1-100) [85]:」のような質問が順番に表示されます。
+    -   画面に、画質(Quality)や解像度(Resolution)、圧縮の判断基準(threshold)などに関する質問が順番に表示されます。
     -   `[ ]` が付いている質問は、**何も入力せずにEnterキーを押す**と、`[ ]` の中のおすすめ設定（デフォルト値）が自動的に使われます。
     -   こだわりがなければ、**すべての質問に対して、ただEnterキーを押していくだけでOK**です。
 
