--- a/使い方ガイド.md
+++ b/使い方ガイド.md
@@ -29,19 +29,28 @@
 - **役割**: 画像のサイズ変更や圧縮などの画像処理を行います。
 - **入手方法**:
     1. [ImageMagick公式サイト](https://imagemagick.org/script/download.php) にアクセスします。
-    2. 「Windows Binary Release」のセクションから、`...-x64-dll.exe` という名前のインストーラー（例: `ImageMagick-7.X.X-X-Q16-HDRI-x64-dll.exe`）をダウンロードします。
-    3. ダウンロードしたインストーラーを実行します。
-    4. **重要**: インストール中に「**Add application directory to your system path (PATH)**」というチェックボックスが表示されたら、**必ずチェックを入れてください。**
-    5. インストール先フォルダ（通常は `C:\Program Files\ImageMagick-7...`）を開き、`magick.exe` をコピーします。
-    6. コピーしたファイルを、作業フォルダ（`C:\JisuiTools`）に貼り付けます。
+    2. 「Windows Binary Release」のセクションから、ファイル名に `static` と含まれるzipファイル（例: `ImageMagick-7.X.X-X-Q16-HDRI-x64-static.zip`）を探してダウンロードします。
+    3. ダウンロードしたzipファイルを解凍（展開）します。
+    4. 解凍したフォルダの中から `magick.exe` をコピーします。
+    5. コピーしたファイルを、作業フォルダ（`C:\JisuiTools`）に貼り付けます。
+- **ポイント**: static版の `magick.exe` は、それ単体で動作し、他にDLLファイルなどを必要としないため、管理がとても簡単です。
 
 #### ④ PDFCPU
-- **役割**: 画像ファイルをまとめてPDFを作成します。
+- **役割**: 画像ファイルをまとめてPDFを作成し、PDFのビューア設定を調整します。
 - **入手方法**:
     1. [PDFCPU公式サイト](https://pdfcpu.io/download) にアクセスします。
     2. 「Windows (64-bit)」のセクションにある `pdfcpu_..._Windows_x86_64.zip` というリンクをクリックして、zipファイルをダウンロードします。
     3. ダウンロードしたzipファイルを解凍（展開）します。
     4. 解凍したフォルダの中から `pdfcpu.exe` をコピーします。
+    5. コピーしたファイルを、作業フォルダ（`C:\JisuiTools`）に貼り付けます。
+
+#### ⑤ QPDF（オプション）
+- **役割**: PDFのリニアライズ処理に使用されます（オプション）。
+- **入手方法**:
+    1. [QPDF公式サイト](https://github.com/qpdf/qpdf/releases) にアクセスします。
+    2. 最新バージョンの `qpdf-...-mingw64.zip` というリンクをクリックして、zipファイルをダウンロードします。
+    3. ダウンロードしたzipファイルを解凍（展開）します。
+    4. 解凍したフォルダの中から `qpdf.exe` と関連するDLLファイル（例: `qpdf30.dll`）をコピーします。
     5. コピーしたファイルを、作業フォルダ（`C:\JisuiTools`）に貼り付けます。
 
 ### 手順3：最終確認
@@ -52,6 +61,8 @@
 - `7z.dll`
 - `magick.exe`
 - `pdfcpu.exe`
+
+QPDFをインストールした場合は、`qpdf.exe` と関連するDLLファイル（例: `qpdf30.dll`）も作業フォルダに配置されている必要があります。QPDFがスクリプトと同じフォルダに配置されているか、環境変数PATHに登録されている場合にのみ、リニアライズ機能が有効になります。
 
 これで準備は完了です。
 
@@ -69,6 +80,10 @@
     -   画面に、画質(Quality)や解像度(Resolution)、圧縮の判断基準(threshold)などに関する質問が順番に表示されます。
     -   `[ ]` が付いている質問は、**何も入力せずにEnterキーを押す**と、`[ ]` の中のおすすめ設定（デフォルト値）が自動的に使われます。
     -   こだわりがなければ、**すべての質問に対して、ただEnterキーを押していくだけでOK**です。
+    -   途中で「Deskew (auto-straighten) (y/n)? [n]:」という質問が表示されます。これはスキャン時に発生した画像の傾きを自動で補正する機能です。必要であれば `y` を入力して有効にしてください。
+    -   最後に「Linearize PDF (web optimization) (y/n)? [n]:」と尋ねられます。ウェブでPDFを表示する際に読み込みを高速化したい場合は `y` と入力してください。
+    -   **注意**: この機能を有効にするには、準備編で説明した**QPDFがインストールされている必要があります。** QPDFがない場合、`y`と入力してもリニアライズ処理はスキップされます。
+    -   **注意**: リニアライズされたPDFは、一部の古いPDFビューアや特殊な処理系では正しく読み取れない場合があります。主にローカルまたは内部ネットワークでの利用を想定している場合、または互換性が重要な場合は、`n` と入力してこの機能を無効にしてください。
 
 3.  **実行確認**:
     -   すべての質問に答えると、最終的に実行されるコマンドが表示され、「Press Enter to run, or Ctrl+C to cancel...」というメッセージで一時停止します。
