--- a/使い方ガイド.md
+++ b/使い方ガイド.md
@@ -10,7 +10,7 @@
 まず、作業用のフォルダをPCの好きな場所（例: デスクトップやドキュメントなど）に作成します。このガイドでは、例として `C:\JisuiTools` というフォルダ名で説明します。
 
 ### 手順2：ツールのダウンロードと配置
-以下の4つのツールを、作成した作業フォルダ（`C:\JisuiTools`）の中に集めます。
+以下のツールを、作成した作業フォルダ（`C:\JisuiTools`）の中に集めます。
 
 #### ① JisuiArc2PDF スクリプト
 - **ファイル**: `JisuiArc2PDF.ps1` と `JisuiArc2PDF.bat`
@@ -54,7 +54,7 @@
     5. コピーしたファイルを、作業フォルダ（`C:\JisuiTools`）に貼り付けます。
 
 ### 手順3：最終確認
-すべての手順が終わると、作業フォルダ（`C:\JisuiTools`）には以下の6つのファイルが揃っているはずです。
+すべての手順が終わると、作業フォルダ（`C:\JisuiTools`）には以下のファイルが揃っているはずです。
 - `JisuiArc2PDF.ps1`
 - `JisuiArc2PDF.bat`
 - `7z.exe`
@@ -62,40 +62,46 @@
 - `magick.exe`
 - `pdfcpu.exe`
 
-QPDFをインストールした場合は、`qpdf.exe` と関連するDLLファイル（例: `qpdf30.dll`）も作業フォルダに配置されている必要があります。QPDFがスクリプトと同じフォルダに配置されているか、環境変数PATHに登録されている場合にのみ、リニアライズ機能が有効になります。
+QPDFをインストールした場合は、`qpdf.exe` と関連するDLLファイルも配置してください。
 
 これで準備は完了です。
 
 ---
 
-## 2. 実践編：ドラッグ＆ドロップでPDFを作成
+## 2. 実践編：簡単な方法でPDFを作成
 
-準備が整ったら、PDFの作成はとても簡単です。
+準備が整ったら、いよいよPDFを作成します。一番簡単な方法は、同梱されているバッチファイルを使うことです。
 
-1.  **ドラッグ＆ドロップ**:
-    -   PDFにしたい書庫ファイル（`.rar` や `.zip`）を、`JisuiArc2PDF.bat` のアイコンの上にマウスでドラッグ＆ドロップします。
-    -   黒い画面（コマンドプロンプト）が表示されます。
+### 方法1：バッチファイルで起動（一番かんたん）
 
-2.  **対話形式で設定**:
-    -   画面に、画質(Quality)や解像度(Resolution)、圧縮の判断基準(threshold)などに関する質問が順番に表示されます。
+1.  **重要**: 変換したい書庫ファイル（`.rar` や `.zip`）を、ツールと同じ作業フォルダの中に移動しておきます。
+2.  `JisuiArc2PDF.bat` をダブルクリックします。
+3.  黒いウィンドウ（PowerShell）が自動的に起動し、すぐに対話モードが始まります。
+
+### 方法2：手動でPowerShellを起動
+
+もしバッチファイルがうまく動かない場合は、手動でPowerShellを起動することもできます。
+
+1.  エクスプローラーで、作業フォルダを開きます。
+2.  エクスプローラーのアドレスバー（フォルダのパスが表示されている場所）をクリックし、`pwsh` と入力して `Enter` キーを押します。
+3.  起動したPowerShellの画面で、以下のコマンドを入力して `Enter` キーを押します。
+    ```powershell
+    pwsh -File .\JisuiArc2PDF.ps1
+    ```
+
+### 対話モードでの設定
+
+上記いずれかの方法でスクリプトを起動すると、対話モードが始まります。
+
+1.  最初に「処理する書庫のパスを入力してください」と聞かれます。変換したいファイル名（ワイルドカードも使えます）を入力して `Enter` を押します。
+    -   **例1（フォルダ内すべて）**: フォルダ内の全てのrarファイルを処理したい場合 → `*.rar`
+    -   **例2（個別指定）**: 特定のファイルだけを処理したい場合 → `"MyBook.zip"`
+2.  パスを入力すると、画質や解像度などに関する質問が順番に表示されます。
     -   `[ ]` が付いている質問は、**何も入力せずにEnterキーを押す**と、`[ ]` の中のおすすめ設定（デフォルト値）が自動的に使われます。
     -   こだわりがなければ、**すべての質問に対して、ただEnterキーを押していくだけでOK**です。
-    -   途中で「Adjust Grayscale contrast (y/n)?」という質問が表示されます。これは主に白黒ページの紙焼け（黄ばみ）を軽減する機能です。必要であれば `y` を入力してください。
-    -   次に「Auto-adjust Color contrast (y/n)?」という質問が表示されます。これはカラーページのコントラストを自動で最適化する便利な機能です。通常は `y` を入力してEnterキーを押すことをお勧めします。
-    -   自動調整を選ばなかった場合のみ、「Adjust Color contrast (y/n)?」と手動での調整を聞かれます。必要であれば `y` を入力して値を設定してください。
-    -   途中で「Deskew (auto-straighten) (y/n)? [n]:」という質問が表示されます。これはスキャン時に発生した画像の傾きを自動で補正する機能です。必要であれば `y` を入力して有効にしてください。
-    -   最後に「Linearize PDF (web optimization) (y/n)? [n]:」と尋ねられます。ウェブでPDFを表示する際に読み込みを高速化したい場合は `y` と入力してください。
-    -   **注意**: この機能を有効にするには、準備編で説明した**QPDFがインストールされている必要があります。** QPDFがない場合、`y`と入力してもリニアライズ処理はスキップされます。
-    -   **注意**: リニアライズされたPDFは、一部の古いPDFビューアや特殊な処理系では正しく読み取れない場合があります。主にローカルまたは内部ネットワークでの利用を想定している場合、または互換性が重要な場合は、`n` と入力してこの機能を無効にしてください。
-
-3.  **実行確認**:
-    -   すべての質問に答えると、最終的に実行されるコマンドが表示され、「Press Enter to run, or Ctrl+C to cancel...」というメッセージで一時停止します。
-    -   これは最終確認の画面です。そのまま **Enterキーを押す**と、PDF変換が始まります。
-
-4.  **完了**:
-    -   処理が始まると、たくさんの文字が画面に流れます。
-    -   「Done. Press any key to exit.」と表示されたら、すべての処理は完了です。
-    -   元の書庫ファイルがあった場所と同じ場所に、新しいPDFファイルが作成されていることを確認してください。
+3.  すべての質問に答えると、PDF変換が始まります。
+4.  「すべての処理が完了しました。」と表示されたら、完了です。何かキーを押すとウィンドウが閉じます。
+5.  作業フォルダに、新しいPDFファイルが作成されていることを確認してください。
 
 ---
 
